<resources>
    <string name="app_name">DoctorConnect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="add_disease"><u>Add Previous Disease</u></string>
    <string name="add_spec"><u>Add Specialization</u></string>
    <string name="add_hosp"><u>Add Hospital</u></string>


    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Profile</string>
    <string name="navigation_item_3">Appointment</string>
    <string name="navigation_item_4">Search</string>
    <string name="navigation_item_5">Favourite</string>
    <string name="navigation_item_6">Diagnose</string>
    <string name="navigation_item_7">Schedule</string>

    <string name="navigation_item_8">Status</string>
    <string name="navigation_item_9">Patient</string>
    <string name="navigation_item_10">Portal</string>

    <string name="signOut_string">Sign Out</string>
    <string name="subheader">Subheader</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="title_activity_result">ResultActivity</string>

    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

</resources>
